--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 
-name = "htmlthing"
+name = "maud"
 version = "0.0.1"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 license = "MIT/Apache-2.0"
-repository = "https://github.com/lfairy/htmlthing"
+repository = "https://github.com/lfairy/maud"
 description = """
 Compile-time HTML templates.
 """
