--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: rust
 script:
-  - cd htmlthing_macros
+  - cd maud_macros
   - cargo build --verbose
   - cargo test --verbose
   - cargo doc --verbose
