--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.0.1"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 license = "MIT/Apache-2.0"
+documentation = "https://lambda.xyz/maud/doc/maud/"
 repository = "https://github.com/lfairy/maud"
 description = """
 Compile-time HTML templates.
