--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: rust
 script:
-  - ( cd maud_macros && cargo build --verbose && cargo test --verbose && cargo doc --verbose )
+  - ( cd maud_macros && cargo test --verbose )
