--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 license = "MIT/Apache-2.0"
 documentation = "https://lambda.xyz/maud/doc/maud/"
+homepage = "http://lfairy.gitbooks.io/maud/content/"
 repository = "https://github.com/lfairy/maud"
 description = """
 Compile-time HTML templates.
