print-expansion for all your expansion printing needs

--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -12,6 +12,9 @@ description = """
 Compile-time HTML templates.
 """
 
+[features]
+print-expansion = []
+
 [dependencies.maud]
 path = "../maud"
 version = "=0.3.4"
