--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: rust
 script:
-  - ( cd maud_macros && cargo test --features print-expansion --verbose )
+  - ( cd maud_macros && cargo test --verbose )
