--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.8.0"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 license = "MIT/Apache-2.0"
-documentation = "https://lambda.xyz/maud/doc/maud/"
+documentation = "https://lambda.xyz/maud/maud/"
 homepage = "http://lfairy.gitbooks.io/maud/content/"
 repository = "https://github.com/lfairy/maud"
 description = """
