Add iron-maud to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ sudo: false
 script:
   - ( cd maud && cargo test --verbose )
   - ( cd maud_macros && cargo test --verbose )
+  - ( cd iron-maud && cargo test --verbose )
