--- a/iron-maud/Cargo.toml
+++ b/iron-maud/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 license = "MIT/Apache-2.0"
-documentation = "https://lambda.xyz/maud/iron-maud"
+documentation = "https://lambda.xyz/maud/iron_maud"
 homepage = "http://lfairy.gitbooks.io/maud/content/"
 repository = "https://github.com/lfairy/maud"
 description = """
