--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 
 name = "maud"
-version = "0.10.0"
+version = "0.11.0"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 license = "MIT/Apache-2.0"
 documentation = "https://lambda.xyz/maud/maud/"
-homepage = "http://lfairy.gitbooks.io/maud/content/"
+homepage = "https://maud.lambda.xyz/"
 repository = "https://github.com/lfairy/maud"
 description = """
 Compile-time HTML templates.
