Travis: add cargo-clippy to $PATH

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ sudo: false
 
 before_script:
   - cargo install clippy || true
+  - export PATH=$HOME/.cargo/bin:$PATH
 
 script:
   - ( cd maud && cargo test --all-features )
-  - if command -v cargo-clippy; then ( cd maud && cargo clippy -- -D warnings ); fi
+  - if command -v cargo-clippy > /dev/null; then ( cd maud && cargo clippy -- -D warnings ); fi
   - ( cd maud_macros && cargo test --all-features )
-  - if command -v cargo-clippy; then ( cd maud_macros && cargo clippy -- -D warnings ); fi
+  - if command -v cargo-clippy > /dev/null; then ( cd maud_macros && cargo clippy -- -D warnings ); fi
   - ( cd maud_extras && cargo test --all-features )
-  - if command -v cargo-clippy; then ( cd maud_extras && cargo clippy -- -D warnings ); fi
+  - if command -v cargo-clippy > /dev/null; then ( cd maud_extras && cargo clippy -- -D warnings ); fi
