--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -14,3 +14,4 @@ Compile-time HTML templates.
 
 [dependencies]
 iron = { version = "0.4.0", optional = true }
+rocket = { version = "0.1.2", optional = true }
