--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -14,4 +14,4 @@ Compile-time HTML templates.
 
 [dependencies]
 iron = { version = "0.5.1", optional = true }
-rocket = { version = "0.1.2", optional = true }
+rocket = { version = ">= 0.1.2, < 0.3", optional = true }
