Add juicy metadata to Cargo.toml

--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -8,10 +8,12 @@ license = "MIT/Apache-2.0"
 documentation = "https://lambda.xyz/maud/maud/"
 homepage = "https://maud.lambda.xyz/"
 repository = "https://github.com/lfairy/maud"
-description = """
-Compile-time HTML templates.
-"""
+description = "Compile-time HTML templates."
+categories = ["template-engine"]
 
 [dependencies]
 iron = { version = "0.5.1", optional = true }
 rocket = { version = ">= 0.1.2, < 0.3", optional = true }
+
+[badges]
+travis-ci = { repository = "lfairy/maud" }
