--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -8,9 +8,7 @@ license = "MIT/Apache-2.0"
 documentation = "https://lambda.xyz/maud/maud/"
 homepage = "https://maud.lambda.xyz/"
 repository = "https://github.com/lfairy/maud"
-description = """
-Compile-time HTML templates.
-"""
+description = "Compile-time HTML templates."
 
 [dependencies]
 if_chain = "0.1"
@@ -19,3 +17,6 @@ maud = { path = "../maud", version = "0.16.0" }
 [lib]
 name = "maud_macros"
 plugin = true
+
+[badges]
+travis-ci = { repository = "lfairy/maud" }
