--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ before_script:
   - export PATH=$HOME/.cargo/bin:$PATH
 
 script:
+  - |
+    if [ -n "$TRAVIS_COMMIT_RANGE" ]; then
+      echo 'Checking for tabs'
+      ! git diff --name-only --diff-filter=ACMR "$TRAVIS_COMMIT_RANGE" | xargs grep $'\t'
+    fi
   - ( cd maud && cargo test --all-features )
   - if command -v cargo-clippy > /dev/null; then ( cd maud && cargo clippy -- -D warnings ); fi
   - ( cd maud_macros && cargo test --all-features )
