--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 
 name = "maud_macros"
+# When releasing a new version, please update html_root_url in src/lib.rs
 version = "0.16.3"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 license = "MIT/Apache-2.0"
-documentation = "https://lambda.xyz/maud/maud/"
+documentation = "https://docs.rs/maud_macros/"
 homepage = "https://maud.lambda.xyz/"
 repository = "https://github.com/lfairy/maud"
 description = "Compile-time HTML templates."
