--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -13,11 +13,11 @@ description = "Compile-time HTML templates."
 
 [dependencies]
 if_chain = "0.1"
-maud = { path = "../maud", version = "0.16.0" }
+literalext = { git = "https://github.com/mystor/literalext.git", default-features = false, features = ["proc-macro"] }
 
 [lib]
 name = "maud_macros"
-plugin = true
+proc-macro = true
 
 [badges]
 travis-ci = { repository = "lfairy/maud" }
