--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["template-engine"]
 
 [dependencies]
 iron = { version = "0.5.1", optional = true }
-rocket = { version = ">= 0.1.2, < 0.3", optional = true }
+rocket = { version = "0.3", optional = true }
 
 [badges]
 travis-ci = { repository = "lfairy/maud" }
