Use literalext from crates.io

--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -13,7 +13,7 @@ description = "Compile-time HTML templates."
 
 [dependencies]
 if_chain = "0.1"
-literalext = { git = "https://github.com/mystor/literalext.git", default-features = false, features = ["proc-macro"] }
+literalext = { version = "0.1", default-features = false, features = ["proc-macro"] }
 
 [lib]
 name = "maud_macros"
