Update dependencies for benchmarks
Template engines
- maud 0.17.1 (local)
- handlebars 0.29.1
- horrorshow 0.6.2
- liquid 0.10.1
- tera 0.10.10

--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "benchmarks"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
 
 [dependencies]
 maud = { path = "../maud" }
-maud_macros = { path = "../maud_macros" }
 handlebars = "*"
 horrorshow = "*"
 liquid = "*"
 rustc-serialize = "*"
 serde = "*"
 serde_derive = "*"
+serde_json = "*"
 tera = "*"
