--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["template-engine"]
 [dependencies]
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
 maud_macros = { version = "0.17.1", path = "../maud_macros" }
-iron = { version = "0.5.1", optional = true }
+iron = { version = ">= 0.5.1, < 0.7.0", optional = true }
 rocket = { version = "0.3", optional = true }
 
 [dev-dependencies]
