--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ script:
   - |
     if command -v cargo-clippy > /dev/null; then
       CLIPPY_STATUS=0
-      # TODO add `maud_extras` back in when Clippy issue is fixed
-      # https://github.com/rust-lang-nursery/rust-clippy/issues/2594
-      for package in maud_htmlescape maud_macros maud maud_lints; do
+      for package in maud_htmlescape maud_macros maud maud_lints maud_extras; do
         (cd $package && cargo clippy -- -D warnings) || CLIPPY_STATUS=$?
       done
       (exit $CLIPPY_STATUS)
