--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
   - cargo build --features="rocket"
   - cargo build --features="actix-web"
   - cargo test --all
+  - (cd benchmarks && cargo bench --no-run)
   - |
     CLIPPY_STATUS=0
     for package in maud_htmlescape maud_macros maud maud_lints maud_extras; do
