--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -17,7 +17,7 @@ maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
 maud_macros = { version = "0.18.1", path = "../maud_macros" }
 iron = { version = ">= 0.5.1, < 0.7.0", optional = true }
 rocket = { version = "0.3", optional = true }
-actix-web = { version = "0.6.12", optional = true }
+actix-web = { version = ">= 0.6.12, < 0.8.0", optional = true }
 
 [dev-dependencies]
 maud_lints = { version = "0.18.1", path = "../maud_lints" }
