--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -13,12 +13,15 @@ description = "Compile-time HTML templates."
 categories = ["template-engine"]
 
 [dependencies]
-futures = "0.1"
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
 maud_macros = { version = "0.19.0", path = "../maud_macros" }
+futures = { version = "0.1", optional = true }
 iron = { version = ">= 0.5.1, < 0.7.0", optional = true }
 rocket = { version = "0.3", optional = true }
 actix-web = { version = ">= 0.6.12, < 0.8.0", optional = true }
+
+[features]
+streaming = ["futures", "maud_macros/streaming"]
 
 [badges]
 travis-ci = { repository = "lfairy/maud" }
