--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ before_script:
   - rustup component add clippy-preview --toolchain=nightly
 
 script:
+  - (cd maud && cargo build) 
+  - (cd maud_macros && cargo test)
   - (cd maud && cargo build --features="iron")
   - (cd maud && cargo build --features="rocket")
   - (cd maud && cargo build --features="actix-web")
-  - cargo test --all
+  - cargo test --all --exclude maud_macros
   - (cd benchmarks && cargo bench --no-run)
   - |
     CLIPPY_STATUS=0
