--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -19,6 +19,10 @@ iron = { version = ">= 0.5.1, < 0.7.0", optional = true }
 rocket = { version = "0.3", optional = true }
 actix-web = { version = ">= 0.6.12, < 0.8.0", optional = true }
 
+[dev-dependencies]
+compiletest_rs = "0.3.15"
+
+
 [badges]
 travis-ci = { repository = "lfairy/maud" }
 
