--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ rust: nightly
 sudo: false
 
 before_script:
-  - rustup component add clippy-preview --toolchain=nightly
+  - |
+    RUN_CLIPPY=true
+    rustup component add clippy-preview --toolchain=nightly || RUN_CLIPPY=false
 
 script:
   - (cd maud && cargo build --features="iron")
@@ -14,8 +16,10 @@ script:
   - (cd maud && cargo build --features="actix-web")
   - (cd benchmarks && cargo bench --no-run)
   - |
-    CLIPPY_STATUS=0
-    for package in maud_htmlescape maud_macros maud maud_extras; do
-      (cd $package && cargo clippy -- -D warnings) || CLIPPY_STATUS=$?
-    done
-    (exit $CLIPPY_STATUS)
+    if $RUN_CLIPPY; then
+      CLIPPY_STATUS=0
+      for package in maud_htmlescape maud_macros maud maud_extras; do
+        (cd $package && cargo clippy -- -D warnings) || CLIPPY_STATUS=$?
+      done
+      (exit $CLIPPY_STATUS)
+    fi
