--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
-
 name = "maud_macros"
 # When releasing a new version, please update html_root_url in src/lib.rs
 version = "0.20.0"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
-
 license = "MIT/Apache-2.0"
 documentation = "https://docs.rs/maud_macros/"
 homepage = "https://maud.lambda.xyz/"
 repository = "https://github.com/lfairy/maud"
 description = "Compile-time HTML templates."
+edition = "2018"
 
 [dependencies]
 literalext = { version = "0.1", default-features = false, features = ["proc-macro"] }
