--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-
 name = "maud"
 # When releasing a new version, please update html_root_url in src/lib.rs
 version = "0.20.0"
 authors = ["Chris Wong <lambda.fairy@gmail.com>"]
-
 license = "MIT/Apache-2.0"
 documentation = "https://docs.rs/maud/"
 homepage = "https://maud.lambda.xyz/"
 repository = "https://github.com/lfairy/maud"
 description = "Compile-time HTML templates."
 categories = ["template-engine"]
+edition = "2018"
 
 [dependencies]
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
