Build table of contents in a separate step
- Add pretty logging to Makefile

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,18 +1,38 @@
-MARKDOWN_FILES := $(wildcard content/*.md)
-HTML_FILES := $(patsubst content/%.md,site/%.html,$(MARKDOWN_FILES))
+slugs := index getting-started basic-syntax dynamic-content partials control-structures traits web-frameworks faq
+
+slug_to_md = content/$(1).md
+slug_to_html = site/$(1).html
+
+builder := target/debug/docs
+nav_json := site/nav.json
+md_files := $(foreach slug,$(slugs),$(call slug_to_md,$(slug)))
+html_files := $(foreach slug,$(slugs),$(call slug_to_html,$(slug)))
+slugs_and_md_files := $(foreach slug,$(slugs),$(slug):$(call slug_to_md,$(slug)))
+
+print_status = @ printf ' \e[1;35m♦ %s\e[0m\n' '$(1)'
 
 .PHONY: all
-all: $(HTML_FILES) site/styles.css
+all: $(html_files) site/styles.css
 
-target/debug/docs: $(wildcard src/*)
-	cargo build
+$(builder): $(wildcard src/*)
+	$(call print_status,Cargo)
+	@ cargo build
 
-site/%.html: content/%.md target/debug/docs
-	target/debug/docs build-page $< $@ $(*F)
+$(nav_json): $(md_files) $(builder)
+	$(call print_status,Table of contents)
+	@ $(builder) build-nav $@ $(slugs_and_md_files)
+
+site/%.html: content/%.md $(nav_json) $(builder)
+	$(call print_status,Render $(*F))
+	@ $(builder) build-page $@ $(*F) $< $(nav_json)
 
 site/styles.css: styles.css
-	cp $^ $@
+	$(call print_status,Copy stylesheet)
+	@ mkdir -p $(dir $@)
+	@ cp $^ $@
 
 .PHONY: clean
 clean:
-	rm -fr site
+	$(call print_status,Clean)
+	@ cargo clean
+	@ rm -fr site
