--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -19,7 +19,7 @@ rocket = { version = ">= 0.3, < 0.5", optional = true }
 actix-web = { version = ">= 0.6.12, < 0.8.0", optional = true }
 
 [dev-dependencies]
-compiletest_rs = "0.3.15"
+compiletest_rs = { version = "0.3.19", features = ["stable"] }
 
 [badges]
 travis-ci = { repository = "lfairy/maud" }
