Travis: build and deploy the book

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,14 @@ jobs:
     - name: "Benchmarks"
       script:
         - (cd benchmarks && cargo test --benches)
+    - name: "Documentation"
+      script:
+        - (cd docs && make -j$(nproc))
+      deploy:
+        provider: pages
+        skip_cleanup: true
+        github_token: $GITHUB_TOKEN
+        fqdn: maud.lambda.xyz
+        local_dir: docs/site
+        on:
+          branch: master
