--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -12,16 +12,15 @@ categories = ["template-engine"]
 edition = "2018"
 
 [features]
-actix-web-2 = ["actix-web-2-dep", "futures"]
+actix-web = ["actix-web-dep", "futures"]
 
 [dependencies]
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
 maud_macros = { version = "0.21.0", path = "../maud_macros" }
 iron = { version = ">= 0.5.1, < 0.7.0", optional = true }
 rocket = { version = ">= 0.3, < 0.5", optional = true }
-actix-web = { version = "1.0.0", optional = true, default-features = false }
-actix-web-2-dep = { version = "2.0.0", optional = true, default-features = false, package = "actix-web" }
 futures = { version = "0.3.0", optional = true }
+actix-web-dep = { version = "2.0.0", optional = true, default-features = false, package = "actix-web" }
 
 [dev-dependencies]
 compiletest_rs = { version = "0.3.19", features = ["stable"] }
