--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
         - |
           RUN_CLIPPY=true
           rustup component add clippy --toolchain=nightly || RUN_CLIPPY=false
-        - cargo test --all --all-features
+        - cargo test --all --features actix-web iron rocket
         - |
           if $RUN_CLIPPY; then
             CLIPPY_STATUS=0
@@ -18,9 +18,12 @@ jobs:
             done
             (exit $CLIPPY_STATUS)
           fi
+    - name: "Unstable"
+      script:
+        - cargo test --all --all-features
     - name: "Benchmarks"
       script:
-        - (cd benchmarks && cargo test --benches)
+        - (cd benchmarks && cargo test --benches --features unstable)
     - name: "Documentation"
       script:
         - (cd docs && make -j$(nproc))
