Split up tests on Travis
`cargo test` doesn't allow `--workspace` and `--features`
simultaneously, so we're forced to test each package separately in order
to manually specify features (or in this case, test everything but
unstable)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ jobs:
         - |
           RUN_CLIPPY=true
           rustup component add clippy --toolchain=nightly || RUN_CLIPPY=false
-        - cargo test --all --features actix-web iron rocket
+        - cargo test --manifest-path maud/Cargo.toml --features actix-web,iron,rocket
+        - cargo test --manifest-path maud_htmlescape/Cargo.toml
+        - cargo test --manifest-path maud_macros/Cargo.toml
         - |
           if $RUN_CLIPPY; then
             CLIPPY_STATUS=0
