Add an off-by-default 'unstable' flag (#202)
* Add an off-by-default 'unstable' flag

* Remove explicit web framework feature names

Having forgotten that deps and features can't have the same name,
attempts to better document all the features in one place were
misplaced.

* Split up tests on Travis

`cargo test` doesn't allow `--workspace` and `--features`
simultaneously, so we're forced to test each package separately in order
to manually specify features (or in this case, test everything but
unstable)

* Update Travis Config

- Document the state of Cargo workspaces and features
- Update the benchmarks to trickle down the 'unstable' feature

--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -12,7 +12,13 @@ categories = ["template-engine"]
 edition = "2018"
 
 [features]
+default = []
+
+# Web framework integrations
 actix-web = ["actix-web-dep", "futures"]
+
+# Unstable features
+unstable = []
 
 [dependencies]
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
