--- a/maud_macros/Cargo.toml
+++ b/maud_macros/Cargo.toml
@@ -15,6 +15,7 @@ syn = "1.0.8"
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
 quote = "1.0.7"
 proc-macro2 = "1.0.18"
+proc-macro-error = "1.0.0"
 
 [lib]
 name = "maud_macros"
