--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -29,7 +29,7 @@ futures = { version = "0.3.0", optional = true }
 actix-web-dep = { version = "2.0.0", optional = true, default-features = false, package = "actix-web" }
 
 [dev-dependencies]
-compiletest_rs = { version = "0.3.19", features = ["stable"] }
+trybuild = { version = "1.0.33", features = ["diff"] }
 
 [badges]
 travis-ci = { repository = "lambda-fairy/maud" }
