Add trybuild tests to config

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,3 +50,6 @@ jobs:
         - cargo fmt -- --check
         - (cd benchmarks && cargo fmt -- --check)
         - (cd docs && cargo fmt -- --check)
+        # trybuild harnesses are technically not part of the Cargo project, so
+        # need to be checked separately
+        - rustfmt --check maud/tests/warnings/*.rs
