--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -17,9 +17,6 @@ default = []
 # Web framework integrations
 actix-web = ["actix-web-dep", "futures"]
 
-# Unstable features
-unstable = []
-
 [dependencies]
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
 maud_macros = { version = "0.22.0", path = "../maud_macros" }
@@ -27,6 +24,9 @@ iron = { version = ">= 0.5.1, < 0.7.0", optional = true }
 rocket = { version = ">= 0.3, < 0.5", optional = true }
 futures = { version = "0.3.0", optional = true }
 actix-web-dep = { version = "2.0.0", optional = true, default-features = false, package = "actix-web" }
+
+[build-dependencies]
+rustc_version = "0.2.3"
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
