--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -26,7 +26,7 @@ futures = { version = "0.3.0", optional = true }
 actix-web-dep = { version = "2.0.0", optional = true, default-features = false, package = "actix-web" }
 
 [build-dependencies]
-rustc_version = "0.2.3"
+version_check = "0.9.2"
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
