--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: rust
 rust: nightly
-sudo: false
 
 jobs:
   include:
@@ -26,8 +25,8 @@ jobs:
         - (cd docs && make -j$(nproc))
       deploy:
         provider: pages
-        skip_cleanup: true
-        github_token: $GITHUB_TOKEN
+        cleanup: false
+        token: $GITHUB_TOKEN
         fqdn: maud.lambda.xyz
         local_dir: docs/site
         on:
