Fix documentation deployment
The `cleanup` flag is only available on [dpl v2] which is opt-in. Moreover, dpl v2 defaults to `cleanup: false` anyway so there is no need to specify it.

[dpl v2]: https://docs.travis-ci.com/user/deployment-v2

cc #224

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,11 @@ jobs:
         - (cd docs && make -j$(nproc))
       deploy:
         provider: pages
-        cleanup: false
+        edge: true
         token: $GITHUB_TOKEN
         fqdn: maud.lambda.xyz
         local_dir: docs/site
+        keep_history: false
         on:
           branch: master
     - name: "Format"
