--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -15,15 +15,15 @@ edition = "2018"
 default = []
 
 # Web framework integrations
-actix-web = ["actix-web-dep", "futures"]
+actix-web = ["actix-web-dep", "futures-util"]
 
 [dependencies]
 maud_htmlescape = { version = "0.17.0", path = "../maud_htmlescape" }
 maud_macros = { version = "0.22.0", path = "../maud_macros" }
 iron = { version = ">= 0.5.1, < 0.7.0", optional = true }
 rocket = { version = ">= 0.3, < 0.5", optional = true }
-futures = { version = "0.3.0", optional = true }
-actix-web-dep = { version = "2.0.0", optional = true, default-features = false, package = "actix-web" }
+futures-util = { version = "0.3.0", optional = true, default-features = false }
+actix-web-dep = { package = "actix-web", version = ">=2, <4", optional = true, default-features = false }
 
 [dev-dependencies]
 trybuild = { version = "1.0.33", features = ["diff"] }
