Add actix-web example

--- a/maud/Cargo.toml
+++ b/maud/Cargo.toml
@@ -33,3 +33,7 @@ travis-ci = { repository = "lambda-fairy/maud" }
 
 [package.metadata.docs.rs]
 all-features = true
+
+[[example]]
+name = "actix"
+required-features = ["actix-web"]
