Use rustfmt from stable instead of nightly

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,9 @@ jobs:
         on:
           tags: true
     - name: "Format"
+      # rustfmt is often missing on nightly. Since there's little benefit to
+      # using the nightly version, use the more reliable stable build instead.
+      rust: stable
       before_script:
         - rustup component add rustfmt
       script:
