Note that docs CI should be kept in sync with publish script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
     - name: Run benchmarks
       run: cd benchmarks && cargo test --benches --locked
 
+  # Please keep this in sync with `publish-docs.yml`
   documentation:
     name: Documentation
     runs-on: ubuntu-latest
