--- a/doctest/Cargo.toml
+++ b/doctest/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2018"
 
 [dependencies]
 actix-web = "3"
+ammonia = "3"
 iron = "0.6"
 maud = { path = "../maud", features = ["actix-web", "iron", "rocket"] }
+pulldown-cmark = "0.8"
 rocket = "0.4"
+rouille = "3"
 
 [lib]
 path = "lib.rs"
